[package]
name = "keygen"
description = "Tool to generate rust code with hierarchical string constants from simple file formats"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://gitlab.com/menkalian/keygen-rs"
repository = "https://gitlab.com/menkalian/keygen-rs.git"
documentation = "https://gitlab.com/menkalian/keygen-rs"

[dependencies]
