[package]
name = "keystring_generator"
version = "0.1.1"
edition = "2021"

authors = ["Kilian Krampf <kilian@mail.menkalian.de>"]
description = "Tool to generate rust code with hierarchical string constants from simple file formats"
keywords = ["generated", "dev-util"]
categories = ["development-tools", "development-tools::build-utils"]
readme = "README.md"

license = "MIT"
homepage = "https://gitlab.com/menkalian/keystring-generator"
repository = "https://gitlab.com/menkalian/keystring-generator"

[dependencies]
